Fix inconsistent bottom spacing on recipe sections

--- a/web/src/styles/components/Paragraph.module.scss
+++ b/web/src/styles/components/Paragraph.module.scss
@@ -1,3 +1,7 @@
 .dimmed {
   color: var(--slate9);
 }
+
+.paragraph {
+  margin-bottom: 0;
+}
